--- a/src/pages/UserPage/user.css
+++ b/src/pages/UserPage/user.css
@@ -5,3 +5,33 @@
 .title-info:hover a, .title-info-active a {
     color: #fff!important;
 }
+
+
+.item--user{
+    text-align: left;
+    padding: 0px 24px;
+    cursor: pointer;
+}
+
+.list--user:hover .item--user{
+    color: #fff;
+}
+.list--user:hover .text--user{
+    color: #fff !important;
+}
+.list--user:hover{
+    background-color: #0092ff;
+}
+
+.list-user{
+    transition: all linear .3s;
+}
+
+.user__active--link{
+    background-color: #0092ff;
+   
+
+}
+ .text--user__link{
+    color: #fff !important;
+}
